<resources>
    <string name="app_name">EasyMqttClient</string>
    <string name="app_name_dev">EasyMqttClientDev</string>

    <string name="all_input_client_id">Client Id</string>
    <string name="all_input_server">Mqtt Host</string>
    <string name="all_input_port">Mqtt Port</string>
    <string name="all_input_user_name">User Name</string>
    <string name="all_input_password">Password</string>
    <string name="all_clear_session">Clear Session</string>
    <string name="all_auto_subscribe">Auto Subscribe</string>
    <string name="all_auto_reconnect">Auto Reconnect</string>
    <string name="all_connection">Build Connection</string>
    <string name="all_build_connection">Connect</string>
    <string name="all_subscribe_publish">Subscribe And Publish</string>
    <string name="all_topic">Topic</string>
    <string name="all_message">Message</string>
    <string name="all_qos">QOS</string>
    <string name="all_subscribe">Subscribe</string>
    <string name="all_subscribe_topic">Subscribe Topic</string>
    <string name="all_publish">Publish</string>
    <string name="all_publish_message">Publish Messages</string>
    <string name="all_disconnect">Disconnect</string>
    <string name="all_retained">Retained</string>
    <string name="all_expansion">Expansion</string>
    <string name="all_shrink">Shrink</string>
    <string name="all_log_title">Log Information</string>

    <string name="all_tips_refuse_build_connection">The key parameters are not configured, and the connection to the server cannot be established ~</string>
    <string name="all_tips_empty_topic">The publication topic has not yet been entered ~ </string>
    <string name="all_tips_refuse_other_operation">No connection has been established with the MQTT server ~</string>
    <string name="all_tips_empty_message">No message has been entered yet ~</string>

    <!--menu-->
    <string name="all_navigation_menu_connection">Connection</string>
    <string name="all_navigation_menu_logger">Logger</string>
    <string name="all_navigation_menu_devices_info">Device information</string>
    <string name="all_navigation_menu_setting">Settings</string>
    <string name="all_navigation_item_feedback">Send feedback</string>

    <!--permission-->
    <string name="rationale_camera">Disable camera permissions, you will not be able to use camera related functions~</string>
    <string name="rationale_contact">Disable contact permissions, you will not be able to use contact related features~</string>
    <string name="rationale_location">Disabling location information permission will not get device location information~</string>
    <string name="rationale_record_audio">Disable microphone permission, you will not be able to use the recording or call recording function~</string>
    <string name="rationale_phone">Disabling phone permissions, you will not be able to use device phone related features~</string>
    <string name="rationale_sms">Disable SMS permission, you will not be able to use device SMS related function~</string>
    <string name="rationale_storage">Disable storage space permissions, you will not be able to use the file read and write or delete function ~</string>

    <!--Setting-->
    <string name="all_setting">Setting</string>
    <string name="all_app_version">v%1$s</string>
    <string name="all_blog_url">Blog：</string>
    <string name="all_personal_email">Email：</string>
    <string name="all_personal_github">Github：</string>
    <string name="all_save_configure">CacheEnable</string>
    <string name="all_mqtt_default_configure">Default Configure</string>
    <string name="all_mqtt_user_configure">User Configure</string>
    <string name="all_clear_session_tips">Note:If set to true the client and server will not maintain state across restarts of the client, the server or the connection.Otherwise false.</string>
    <string name="all_tips_clear_auto_reconnect">Note:If set to true, in the event that the connection is lost, the client will attempt to reconnect to the server.Otherwise false.</string>
    <string name="all_connection_timeout">Connection Timeout</string>
    <string name="all_hint_connection_timeout">Input connection timeout value</string>
    <string name="all_connection_timeout_tips">Note:This value, measured in seconds, defines the maximum time interval the client will wait for the network connection to the MQTT server to be established.</string>
    <string name="all_keepalive">Keepalive Interval</string>
    <string name="all_hint_keepalive">Input keepalive interval value~</string>
    <string name="all_keepalive_tips">Note:This value, measured in seconds, defines the maximum time interval between messages sent or received.</string>
    <string name="all_save">Save</string>
    <string name="all_hint_client_id">Input your client id</string>
    <string name="all_tips_client_id">Note:The client id must be different with previous id.Which will cause connection lost.</string>
    <string name="all_hint_mqtt_host">Input your mqtt host</string>
    <string name="all_tips_mqtt_host">Note:Mqtt host.(e.g. 111.112.130.50)</string>
    <string name="all_hint_mqtt_port">Input your mqtt port</string>
    <string name="all_tips_mqtt_port">Note:Mqtt port.(e.g. 8080)</string>
    <string name="all_tips_topic">Note:The topic that you subscribe or publish to the server.</string>
    <string name="all_publish_topic">Publish Topic</string>
    <string name="all_tips_cache_configure">Note:If set to true, all configurations listed in the page will be cached after the connection is established, after the topic is subscribed, or after the message is published.</string>
    <string name="all_load_cache">Load cache</string>
    <string name="all_title_mqtt_info">MQTT Information Configuration</string>
</resources>
