<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/shape_white_bg"
    android:focusable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/all_connection"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:drawableEnd="@drawable/icon_arrow_right_blue"
            android:gravity="center_vertical"
            android:text="@string/all_build_connection"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <include layout="@layout/layout_divider_gray" />

    <!--Client ID-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_client_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/all_input_client_id"
            android:inputType="text"
            android:paddingStart="12dp"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />
    </android.support.design.widget.TextInputLayout>

    <!--Server-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_server"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/all_input_server"
            android:inputType="text"
            android:paddingStart="12dp"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />
    </android.support.design.widget.TextInputLayout>

    <!--Port-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_port"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/all_input_port"
            android:inputType="number"
            android:paddingStart="12dp"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />
    </android.support.design.widget.TextInputLayout>

    <!--用户名&密码-->
    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/layout_home_connection_expansion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        android:visibility="gone">
        <!--Client ID-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/all_input_user_name"
                android:inputType="text"
                android:paddingStart="12dp"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />
        </android.support.design.widget.TextInputLayout>

        <!--Server-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/all_input_password"
                android:inputType="text"
                android:paddingStart="12dp"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />
        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.LinearLayoutCompat>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <CheckBox
            android:id="@+id/cb_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@+id/cb_session"
            android:text="@string/all_clear_session"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_connection_expansion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:text="@string/all_expansion"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <CheckBox
            android:id="@+id/cb_auto_reconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_auto_reconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/all_auto_reconnect"
            android:textColor="@android:color/black" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <CheckBox
            android:id="@+id/cb_load_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/all_load_cache"
            android:textColor="@android:color/black" />
    </android.support.v7.widget.LinearLayoutCompat>

    <!--连接信息-->
    <ScrollView
        android:id="@+id/layout_configure"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/shape_loading_bg"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_configure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="12sp"
            tools:text="Configure:" />
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>