<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_user"
        layout="@layout/layout_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_user">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--ClientId-->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp">

                <TextView
                    android:id="@+id/tv_mqtt_client_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_input_client_id"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--Client ID-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_mqtt_client_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mqtt_client_id">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_mqtt_client_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/all_hint_client_id"
                        android:inputType="text"
                        android:paddingStart="12dp"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_tips_client_id"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@+id/layout_mqtt_client_id" />
            </android.support.constraint.ConstraintLayout>

            <include layout="@layout/layout_horizonal_gray_divider" />

            <!--Host-->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp">

                <TextView
                    android:id="@+id/tv_mqtt_host"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_input_server"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_mqtt_host"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mqtt_host">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_mqtt_host"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/all_hint_mqtt_host"
                        android:inputType="text"
                        android:paddingStart="12dp"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_tips_mqtt_host"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@+id/layout_mqtt_host" />
            </android.support.constraint.ConstraintLayout>

            <include layout="@layout/layout_horizonal_gray_divider" />

            <!--Port-->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp">

                <TextView
                    android:id="@+id/tv_mqtt_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_input_port"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_mqtt_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mqtt_port">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_mqtt_port"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/all_hint_mqtt_port"
                        android:inputType="text"
                        android:paddingStart="12dp"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_tips_mqtt_port"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@+id/layout_mqtt_port" />
            </android.support.constraint.ConstraintLayout>

            <include layout="@layout/layout_horizonal_gray_divider" />

            <!--Subscribe topic-->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp">

                <TextView
                    android:id="@+id/tv_mqtt_subscribe_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_subscribe_topic"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_mqtt_subscribe_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mqtt_subscribe_topic">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_mqtt_subscribe_topic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/all_topic"
                        android:inputType="text"
                        android:paddingStart="12dp"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_tips_topic"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@+id/layout_mqtt_subscribe_topic" />
            </android.support.constraint.ConstraintLayout>

            <include layout="@layout/layout_horizonal_gray_divider" />

            <!--Publish topic-->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp">

                <TextView
                    android:id="@+id/tv_mqtt_publish_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_publish_topic"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_mqtt_publish_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mqtt_publish_topic">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_mqtt_publish_topic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/all_topic"
                        android:inputType="text"
                        android:paddingStart="12dp"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_tips_topic"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@+id/layout_mqtt_publish_topic" />
            </android.support.constraint.ConstraintLayout>

            <include layout="@layout/layout_horizonal_gray_divider" />

            <!--自动保存-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp">

                <TextView
                    android:id="@+id/tv_mqtt_cache_configure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/all_save_configure"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sw_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:checked="false" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_tips_cache_configure"
                android:textSize="12sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_mqtt_publish_topic" />

            <include layout="@layout/layout_horizonal_gray_divider" />

            <!--自动加载-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp">

                <TextView
                    android:id="@+id/tv_mqtt_load_cache"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/all_load_cache"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sw_load_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:checked="false" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_tips_locd_cache"
                android:textSize="12sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_mqtt_publish_topic" />

            <include layout="@layout/layout_horizonal_gray_divider" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_operation_btn"
                android:gravity="center"
                android:text="@string/all_save"
                android:textColor="@color/colorWhite" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>