<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLigthGray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">
        <!--Client ID-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_client_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/all_input_client_id"
                android:inputType="text"
                android:paddingStart="12dp"
                tools:ignore="RtlSymmetry" />
        </android.support.design.widget.TextInputLayout>

        <!--Server-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_server"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/all_input_server"
                android:inputType="text"
                android:text="119.254.229.167"
                android:paddingStart="12dp"
                tools:ignore="RtlSymmetry" />
        </android.support.design.widget.TextInputLayout>

        <!--Port-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_port"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/all_input_port"
                android:inputType="number"
                android:text="3080"
                android:paddingStart="12dp"
                tools:ignore="RtlSymmetry" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/all_clear_session"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/cb_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/tv_session" />
        </RelativeLayout>

        <!--建立连接-->
        <Button
            android:id="@+id/btn_build_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_build_connection" />
    </LinearLayout>

</LinearLayout>